[package]
name = "kagi"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.12"
colored = "2.0.0"
input = "0.8.2"
libc = "0.2.146"
log = "0.4.19"
serde = "1.0.171"
serde_derive = { version = "1.0.171", features = ["deserialize_in_place"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.6"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
